--- a/Coding.ipynb
+++ b/Coding.ipynb
@@ -61,7 +61,7 @@
     }
    ],
    "source": [
-    "print('hello world')"
+    "print('https://app.codescreen.com/candidate/1814920b-047c-430c-856e-6a87e9f8c229')"
    ]
   },
   {
